<resources>
    <string name="appname">UCLove</string>
    <string name="hintdate">Votre date d\'anniversaire</string>
    <string name="hintnom">Nom</string>
    <string name="hintpseudo">Pseudo</string>
    <string name="decouverte">Découverte</string>
    <string name="settings_recherche">Options de filtre</string>
    <string name="amis">Amis</string>
    <string name="calendrier">Calendrier</string>
    <string name="rencontre">Rencontre</string>
    <string name="profil">Profil</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="genreM">Homme</string>
    <string name="genreF">Femme</string>
    <string name="titresearch">Je recherche :</string>
    <string name="labelAge">Age :</string>
    <string name="souvenir"> Se souvenir de moi </string>
    <string name="btnco"> Connexion </string>
    <string name="btninsc"> Inscription </string>
    <string name="hintmdp"> Mot de passe </string>
    <string name="hintlogger">Adresse mail </string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_calendar">Calendrier</string>
    <string name="action_settings">Paramètres</string>

    <string name="title_activity_friendlist">Liste des amis</string>
    <string name="title_activity_inscription">Inscription</string>

    <string name="title_activity_profile">Mon profil</string>
    <string name="title_activity_profile_other">Profil</string>
    <string name="title_activity_search">Découverte</string>


    <string name="listeamis">Liste d\'amis</string>
    <string name="submit">Soumettre</string>
    <string name="inscription">Inscription</string>
    <string name="email">Adresse e-mail</string>
    <string name="datenaissance">Age</string>

    <string name="sexe">Sexe</string>
    <string name="homme">Homme</string>
    <string name="femme">Femme</string>

    <string name="couleurCheveux">Couleur et longueur de cheveux</string>
    <string name="brun">Brun</string>
    <string name="blond">Blond</string>
    <string name="blanc">Blanc</string>
    <string name="roux">Roux</string>
    <string name="chatain">Châtain</string>
    <string name="noir">Noir</string>

    <string name="orientation">Orientation</string>
    <string name="couleurYeux">Couleur des yeux</string>

    <string name="court">Court</string>
    <string name="milong">Mi-long</string>
    <string name="Long">Long</string>

    <string name="bleu">Bleu</string>
    <string name="vert" >Vert</string>

    <string name="longueurCheveux" >Longueur</string>
    <string name="photo" >Photo</string>
    <string name="email_non_conforme" >Entrez une adresse mail valide</string>
    <string name="date_non_conforme" >Entrez un age valide</string>
    <string name="nom_non_conforme" >Entrez un nom valide</string>
    <string name="mdp_non_conforme" >Entrez un mot de passe valide</string>
    <string name="ajouterPhoto" >Ajouter Photo!</string>
    <string name="prendrePhoto" >Prendre Photo</string>
    <string name="galerie" >Choisir dans la Galerie</string>
    <string name="annuler" >Annuler</string>
    <string name="mauvais_login">Cette combinaison E-mail mot de passe n\'existe pas</string>
    <string name="connexion">Connexion en cours !</string>
    <string name="deja_utilise">L\'email est déjà utilisé</string>
    <string name="compteCree" >Compte créé</string>
    <string name="localisation" >Ville</string>
    <string name="localisation_non_conforme" >Entrez une ville valide</string>
    <string name="pseudo_non_conforme" >Entrez un pseudo valide</string>
    <string name="modifier" >Modifier</string>
    <string name="compteModifie" >Compte modifié</string>
    <string name="langues"> Langues</string>
    <string name="lvl_secret">Niveaux de confidentialité</string>
    <string name="id_user">L\'idantifiant utilisateur</string>
    <string name="cheveuxDec" >Cheveux: </string>
    <string name="Yeux" >Yeux: </string>
    <string name="title_activity_filters" >Filtres</string>
    <string name="inmessage">Entrez un message ...</string>
    <string name="filtresModifie">Filtres modifiés</string>

    <string name="spinner_lvl_secret_low">Bas</string>
    <string name="spinner_lvl_secret_medium">Moyen</string>
    <string name="spinner_lvl_secret_high">Élevé</string>

    <string name="addfriends_error">Cette personne est déjà votre amie !</string>
    <string name="withdrfriends_error">Vous avez déjà dislike cette personne !</string>
    <string name="relation_toString_ami">(ami)</string>
    <string name="relation_toString_fav" translatable="false">(fav)</string>
    
    <string name="event_type_profil">Profil visité</string>
    <string name="event_type_like">Nouvelle amitiée</string>
    <string name="historique">Historique</string>
</resources>
