<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto"
    >

    <group><item
        android:id="@+id/action_profile"
        android:orderInCategory="1"
        android:title="@string/profil"
        compat:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="2"
        android:title="@string/decouverte"
        compat:showAsAction="never" />
    <item
        android:id="@+id/action_filter"
        android:title="@string/settings_recherche"
        compat:showAsAction="never" />
    <item
        android:id="@+id/action_calendar"
        android:title="@string/calendrier"
        compat:showAsAction="never" />
    <item
        android:id="@+id/action_friends"
        android:title="@string/amis"
        compat:showAsAction="never" />
    <item
        android:id="@+id/action_meet"
        android:title="@string/rencontre"
        compat:showAsAction="never" /></group>
</menu>