<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/hintlogger"
        android:ems="10"
        android:id="@+id/textLogger"
        android:layout_marginTop="177dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/textMdp"
        android:layout_alignStart="@+id/textMdp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hintmdp"
        android:ems="10"
        android:id="@+id/textMdp"
        android:layout_below="@+id/textLogger"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <ImageView
        android:src="@drawable/logo_uclove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textLogger"
        android:layout_alignEnd="@+id/textLogger"
        android:layout_alignBottom="@+id/textLogger"
        android:layout_alignLeft="@+id/textLogger"
        android:layout_alignStart="@+id/textLogger"
        android:layout_marginBottom="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnco"
        android:id="@+id/btn_co"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/checkBox"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btninsc"
        android:id="@+id/btn_insc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/checkBox"
        android:layout_alignTop="@+id/btn_co" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/souvenir"
        android:id="@+id/checkBox"
        android:checked="true"
        android:layout_below="@+id/textMdp"
        android:layout_alignLeft="@+id/textMdp"
        android:layout_alignStart="@+id/textMdp"
        android:layout_marginTop="30dp"/>
</RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <include
        layout="@layout/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="false"
        android:clickable="true"/>

    </RelativeLayout>
</FrameLayout>