<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <include layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="1150dp"/>


    <TextView
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Email"
        android:id="@+id/email"
        android:layout_marginTop="108dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@+id/textView14"
        android:layout_toEndOf="@+id/textView14"
        />

    <TextView
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Age"
        android:id="@+id/ageProfil"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@+id/textView14"
        android:layout_toEndOf="@+id/textView14"
        />

    <EditText

        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nom"
        android:hint="@string/hintnom"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ageProfil"/>

    <EditText

        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/pseudo"
        android:hint="@string/hintpseudo"
        android:layout_below="@+id/nom"
        android:layout_alignRight="@+id/nom"
        android:layout_alignEnd="@+id/nom" />

    <EditText
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/mdp"
        android:hint="@string/hintmdp"
        android:layout_below="@+id/pseudo"
        android:layout_alignLeft="@+id/pseudo"
        android:layout_alignStart="@+id/pseudo"
        android:layout_alignRight="@+id/pseudo"
        android:layout_alignEnd="@+id/pseudo" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="             "
        android:id="@+id/textView11"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/textView17" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/orientation"
        android:id="@+id/textView17"
        android:layout_toRightOf="@+id/textView11"
        android:layout_toEndOf="@+id/textView11"
        android:layout_alignTop="@+id/textView14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="    "
        android:id="@+id/textView12"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sexe"
        android:id="@+id/textView14"
        android:layout_marginTop="23dp"

        android:layout_below="@+id/localisation"
        android:layout_alignLeft="@+id/textView15"
        android:layout_alignStart="@+id/textView15" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/sexeSpinner"
        android:layout_below="@+id/textView11"

        android:layout_toRightOf="@+id/textView12"
        android:layout_toLeftOf="@+id/textView11"
        android:layout_toStartOf="@+id/textView11" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/orientationSpinner"
        android:layout_alignTop="@+id/sexeSpinner"

        android:layout_above="@+id/textView15"


        android:layout_toRightOf="@+id/textView11"
        android:layout_toEndOf="@+id/textView11" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/couleurCheveux"
        android:id="@+id/textView15"
        android:layout_below="@+id/sexeSpinner"
        android:layout_toRightOf="@+id/textView12"
        android:layout_toEndOf="@+id/textView12"
        android:layout_marginTop="15dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/couleurCheveuxSpinner"
        android:layout_below="@+id/textView15"
        android:layout_alignLeft="@+id/textView15"
        android:layout_alignStart="@+id/textView15"

        android:layout_toLeftOf="@+id/textView11"
        android:layout_toStartOf="@+id/textView11" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/longueurCheveuxSpinner"

        android:layout_alignRight="@+id/orientationSpinner"
        android:layout_alignEnd="@+id/orientationSpinner"
        android:layout_below="@+id/textView15"
        android:layout_above="@+id/textView16"
        android:layout_alignLeft="@+id/orientationSpinner"
        android:layout_alignStart="@+id/orientationSpinner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/couleurYeux"
        android:id="@+id/textView16"
        android:layout_below="@+id/couleurCheveuxSpinner"
        android:layout_alignLeft="@+id/couleurCheveuxSpinner"
        android:layout_alignStart="@+id/couleurCheveuxSpinner"
        android:layout_marginTop="15dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/couleurYeuxSpinner"
        android:layout_below="@+id/textView16"
        android:layout_alignLeft="@+id/textView16"
        android:layout_alignStart="@+id/textView16"
        android:layout_toLeftOf="@+id/textView11"
        android:layout_toStartOf="@+id/textView11" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modifier"
        android:id="@+id/Modifier"
        android:layout_below="@+id/imageTest"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"


        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photo"
        android:id="@+id/photo"
        android:layout_alignTop="@+id/couleurYeuxSpinner"
        android:layout_toRightOf="@+id/Modifier"
        android:layout_toEndOf="@+id/Modifier" />

    <ImageView
        android:layout_width="225dp"
        android:layout_height="400dp"
        android:scaleType = "fitXY"
        android:id="@+id/imageTest"
        android:src="@drawable/anonyme_perso"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/couleurYeuxSpinner"
        android:layout_marginTop="20dp"

        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/localisation"
        android:inputType="textPostalAddress"
        android:layout_alignTop="@+id/mdp"
        android:layout_marginTop="41dp"
        android:layout_alignLeft="@+id/mdp"
        android:layout_alignStart="@+id/mdp"
        android:layout_alignRight="@+id/mdp"
        android:layout_alignEnd="@+id/mdp"
        android:hint="@string/localisation" />




</RelativeLayout>


</ScrollView>