<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="1150dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/langues"
        android:textSize="30sp"
        android:id="@+id/textView5"
        android:layout_marginLeft="12dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="68dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerLang"
        android:layout_marginLeft="12dp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lvl_secret"
        android:textSize="30sp"
        android:id="@+id/textView6"
        android:layout_below="@+id/spinnerLang"
        android:layout_marginLeft="12dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numberPicker"

        android:measureWithLargestChild="false"
        android:orientation="horizontal"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        android:layout_marginLeft="12dp"
        android:layout_below="@+id/spinnerLang"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_user"
        android:textSize="30sp"
        android:id="@+id/textView13"
        android:layout_marginLeft="12dp"
        android:layout_below="@+id/numberPicker"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="mettre le mail du user"
        android:textSize="20sp"
        android:id="@+id/textView18"
        android:layout_marginLeft="12dp"
        android:layout_below="@+id/textView13"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>